package io.github.amdespotopoulou.sentimentactivelearning.persistence.entity;

import io.github.amdespotopoulou.sentimentactivelearning.commons.enums.LabelSource;
import io.github.amdespotopoulou.sentimentactivelearning.commons.enums.SentimentLabel;
import io.github.amdespotopoulou.sentimentactivelearning.persistence.listener.ReviewSampleListener;
import jakarta.persistence.Column;
import jakarta.persistence.Entity;
import jakarta.persistence.EntityListeners;
import jakarta.persistence.EnumType;
import jakarta.persistence.Enumerated;
import jakarta.persistence.GeneratedValue;
import jakarta.persistence.GenerationType;
import jakarta.persistence.Id;
import jakarta.persistence.Table;
import jakarta.persistence.UniqueConstraint;
import jakarta.validation.constraints.NotBlank;
import jakarta.validation.constraints.NotNull;
import jakarta.validation.constraints.Size;
import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;
import lombok.ToString;
import org.springframework.data.annotation.CreatedDate;
import org.springframework.data.annotation.LastModifiedDate;
import org.springframework.data.jpa.domain.support.AuditingEntityListener;

import java.time.LocalDateTime;

/**
 * JPA entity representing a single movie review sample in the active-learning
 * pipeline.
 *
 * <p>This is the central persistence object of the application. Every meaningful
 * operation — initial model training, classification, oracle labelling, and
 * retraining — ultimately reads from or writes to the {@code REVIEW_SAMPLE} table
 * that this entity maps to.
 *
 * <h2>Lifecycle</h2>
 * <ol>
 *   <li>A review is submitted via the REST API or loaded from seed data.</li>
 *   <li>The classifier attempts to label it. If confident, the label is stored
 *       with {@link LabelSource#SEED} or {@link LabelSource#MANUAL}.</li>
 *   <li>If the classifier is uncertain, the review is forwarded to the Claude AI
 *       oracle, which assigns a label stored with {@link LabelSource#CLAUDE}.</li>
 *   <li>Once enough Claude-labelled samples have accumulated, the model retrains
 *       using all labelled records in this table.</li>
 * </ol>
 *
 * <h2>Uniqueness</h2>
 * <p>The {@code review_text} column carries a unique constraint to prevent
 * duplicate reviews from polluting the training corpus. Attempts to persist a
 * review with the same text as an existing record will be rejected at the
 * database level and translated into a
 * {@link io.github.amdespotopoulou.sentimentactivelearning.exception.ResourceConflictException}
 * by the DAO layer.
 *
 * <h2>Audit timestamps</h2>
 * <p>{@code createdAt} and {@code updatedAt} are populated automatically by
 * Spring Data JPA auditing via {@link AuditingEntityListener}. No manual
 * assignment is needed.
 *
 * @author Angela-Maria Despotopoulou
 */
@Getter
@Setter
@Builder
@ToString
@NoArgsConstructor
@AllArgsConstructor
@Entity
@Table(
        name = "review_sample",
        uniqueConstraints = {
                @UniqueConstraint(
                        name = "uq_review_sample_text",
                        columnNames = "review_text"
                )
        }
)
@EntityListeners({AuditingEntityListener.class, ReviewSampleListener.class})
public class ReviewSample {

    // -------------------------------------------------------------------------
    // Identity
    // -------------------------------------------------------------------------

    /**
     * Surrogate primary key, auto-generated by the database.
     *
     * <p>Uses {@link GenerationType#IDENTITY} so that H2 (and PostgreSQL if
     * migrated later) manages the sequence natively without a separate
     * sequence table.
     */
    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    @Column(name = "id", nullable = false, updatable = false)
    private Long id;

    // -------------------------------------------------------------------------
    // Core data
    // -------------------------------------------------------------------------

    /**
     * The raw text of the movie review submitted for classification.
     *
     * <p>Stored as-is without normalisation so that the original wording is
     * always available for inspection. TF-IDF feature extraction performed
     * by the Tribuo pipeline operates on this value at training time.
     *
     * <p>Subject to a database-level unique constraint
     * ({@code uq_review_sample_text}) to prevent duplicate reviews from
     * skewing the training corpus.
     */
    @NotBlank(message = "Review text must not be blank")
    @Size(max = 5000, message = "Review text must not exceed 5000 characters")
    @Column(name = "review_text", nullable = false, length = 5000)
    private String reviewText;

    /**
     * The sentiment label assigned to this review.
     *
     * <p>May be {@code null} when the review has been submitted but not yet
     * labelled — either awaiting manual labelling via the API, or queued for
     * Claude AI oracle labelling because the classifier's confidence fell below
     * the configured uncertainty threshold. A {@code null} label simply means
     * "not ready for training yet" regardless of the reason. All training runs
     * filter on non-null labels only.
     */
    @Enumerated(EnumType.STRING)
    @Column(name = "label", nullable = true, length = 10)
    private SentimentLabel label;

    /**
     * The origin of the sentiment label assigned to this review.
     *
     * <p>Tracks whether the label was supplied as seed data, entered manually
     * via the API, or assigned by the Claude AI oracle during an active-learning
     * cycle. Used to filter and report on data provenance.
     *
     * <p>May be {@code null} when the review has not yet been labelled,
     * regardless of the reason. Always set in tandem with {@link #label} —
     * the two fields are either both {@code null} (unlabelled) or both
     * non-null (labelled).
     */
    @Enumerated(EnumType.STRING)
    @Column(name = "label_source", nullable = true, length = 10)
    private LabelSource labelSource;

    // -------------------------------------------------------------------------
    // Audit timestamps
    // -------------------------------------------------------------------------

    /**
     * The timestamp at which this record was first persisted.
     *
     * <p>Populated automatically by {@link AuditingEntityListener} on insert.
     * Never updated after creation.
     */
    @CreatedDate
    @NotNull
    @Column(name = "created_at", nullable = false, updatable = false)
    private LocalDateTime createdAt;

    /**
     * The timestamp at which this record was most recently updated.
     *
     * <p>Populated automatically by {@link AuditingEntityListener} on both
     * insert and every subsequent update.
     */
    @LastModifiedDate
    @NotNull
    @Column(name = "updated_at", nullable = false)
    private LocalDateTime updatedAt;
}